[package]
name = "rengo-server"
version = "0.1.0"
authors = ["xrop <xrop@xrop.me>"]
edition = "2018"
description = "Rengo server application"
repository = "https://gitlab.com/xrop/rengo-server.git"
license = "MIT OR Apache-2.0"

[dependencies]
rengo-common = { path = "../rengo-common" }
smol = "0.1"
futures = "0.3"
num_cpus = "1"
tungstenite = "0.11"
async-tungstenite = "0.7"
anyhow = "1"
log = "0.4"
env_logger = "0.7"
bincode = "1"
serde = "1"
